<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundStatus">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="5sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">


        <TextView
            android:text="How to Use"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingTop="20sp"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="Bottom Navigation Bar"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10sp"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/nav_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/helpBottomNav"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="Feed Tab"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="30sp"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/feed_tab"
            android:layout_gravity="center"
            android:paddingTop="10sp"
            android:layout_width="150dp"
            android:layout_height="300dp"/>

        <TextView
            android:text="@string/feedTab"
            android:gravity="left"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/activate_auto_top_up"
            android:paddingTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/activateAutoTopUp"
            android:paddingTop="10sp"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/food_card"
            android:layout_gravity="center"
            android:paddingTop="20sp"
            android:layout_width="300dp"
            android:layout_height="200dp"/>

        <TextView
            android:text="@string/foodcard"
            android:gravity="left"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/water_card"
            android:layout_gravity="center"
            android:paddingTop="20sp"
            android:layout_width="300dp"
            android:layout_height="200dp"/>

        <TextView
            android:text="@string/watercard"
            android:gravity="left"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="Photo Tab"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="30sp"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/photo_tab"
            android:layout_gravity="center"
            android:paddingTop="10sp"
            android:layout_width="150dp"
            android:layout_height="300dp"/>

        <TextView
            android:text="@string/photoTab"
            android:gravity="left"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="Settings Tab"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="30sp"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/settings_tab"
            android:layout_gravity="center"
            android:paddingTop="10sp"
            android:layout_width="150dp"
            android:layout_height="300dp"/>

        <TextView
            android:text="@string/settingsTab"
            android:gravity="left"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/edit_name"
            android:layout_gravity="center"
            android:paddingTop="10sp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/editName"
            android:gravity="left"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/profile_picture"
            android:layout_gravity="center"
            android:paddingTop="20sp"
            android:layout_width="300dp"
            android:layout_height="150dp"/>

        <TextView
            android:text="@string/profilePicture"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"/>

        <ImageView
            android:src="@drawable/popup_options"
            android:layout_gravity="center"
            android:paddingTop="20sp"
            android:layout_width="300dp"
            android:layout_height="250dp"/>

        <TextView
            android:text="@string/popupOptions"
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"/>

    </LinearLayout>

</ScrollView>